force-app/main/default/objects/Voucher__c/Voucher__c.object-meta.xml
<CustomObject>
    <label>שובר</label>
    <nameField>
        <displayFormat>V-{00000000}</displayFormat>
        <label>מספר שובר</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>שוברים</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>