force-app/main/default/objects/Voucher__c/fields/Account_Name_f__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_f__c</fullName>
    <formula>ProgramRequest__r.Request__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>שם עסק</label>
    <type>Text</type>
</CustomField>