force-app/main/default/objects/Voucher__c/fields/Appeal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Start_Date__c</fullName>
    <label>תאריך התחלת תהליך ערעור</label>
    <type>Date</type>
</CustomField>