force-app/main/default/objects/Voucher__c/fields/Bussines_id_f__c.field-meta.xml
<CustomField>
    <fullName>Bussines_id_f__c</fullName>
    <formula>ProgramRequest__r.Request__r.Account__r.Business_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ח.פ</label>
    <type>Text</type>
</CustomField>