force-app/main/default/objects/Voucher__c/fields/Contact_Email_f__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_f__c</fullName>
    <formula>ProgramRequest__r.Request__r.Primary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מייל איש קשר</label>
    <type>Text</type>
</CustomField>