force-app/main/default/objects/Voucher__c/fields/Contact_Name_f__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_f__c</fullName>
    <formula>ProgramRequest__r.Request__r.Primary_Contact__r.FirstName +&quot; &quot;+ ProgramRequest__r.Request__r.Primary_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>שם איש קשר</label>
    <type>Text</type>
</CustomField>