force-app/main/default/objects/Voucher__c/fields/Contact_Phone_f__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_f__c</fullName>
    <formula>ProgramRequest__r.Request__r.Primary_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>טלפון</label>
    <type>Text</type>
</CustomField>