force-app/main/default/objects/Voucher__c/fields/DaysUntilExpiration__c.field-meta.xml
<CustomField>
    <fullName>DaysUntilExpiration__c</fullName>
    <formula>((DATEVALUE(CreatedDate))+45) - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ימים שנותרו עד לפג תוקף</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>