force-app/main/default/objects/Voucher__c/fields/Population_type__c.field-meta.xml
<CustomField>
    <fullName>Population_type__c</fullName>
    <formula>TEXT(Voucher_Stock__r.Population_type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>אוכלוסייה</label>
    <type>Text</type>
</CustomField>