force-app/main/default/objects/Voucher__c/fields/ProgramRequest__c.field-meta.xml
<CustomField>
    <fullName>ProgramRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>תוכנית למעסיק</label>
    <referenceTo>ProgramRequest__c</referenceTo>
    <relationshipLabel>שוברים</relationshipLabel>
    <relationshipName>Vouchers</relationshipName>
    <type>Lookup</type>
</CustomField>