force-app/main/default/objects/Voucher__c/fields/Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Date__c</fullName>
    <description>תאריך בו השובר הפך לפג תוקף</description>
    <label>Rejected Date</label>
    <type>DateTime</type>
</CustomField>