force-app/main/default/objects/Voucher__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>מצב שובר</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>אושר עקרונית וממתין לגיוס עובד</fullName>
                <default>true</default>
                <label>אושר עקרונית וממתין לגיוס עובד</label>
            </value>
            <value>
                <fullName>בדיקת העובד שהוגש ע&quot;י החברה המנהלת</fullName>
            </value>
            <value>
                <fullName>ממתין להשלמת מסמכים</fullName>
            </value>
            <value>
                <fullName>גויס עובד</fullName>
            </value>
            <value>
                <fullName>מומש חלקית</fullName>
            </value>
            <value>
                <fullName>מומש במלואו</fullName>
            </value>
            <value>
                <fullName>הליך ערעור- ממתין לקבלת ערעור מהמעסיק</fullName>
            </value>
            <value>
                <fullName>הליך ערעור- ממתין להחלטת המשרד</fullName>
            </value>
            <value>
                <fullName>נדחה- פג תוקף</fullName>
            </value>
            <value>
                <fullName>נדחה- לא אושר עובד</fullName>
            </value>
            <value>
                <fullName>נדחה וממתין להודעה בדבר הגשת ערעור</fullName>
                <isActive>false</isActive>
                <label>נדחה וממתין להודעה בדבר הגשת ערעור</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>